@@ -1,0 +1,18 @@
+﻿namespace AjLanguage.Language
+{
+    using System;
+    using System.Collections.Generic;
+    using System.Linq;
+    using System.Text;
+
+    public enum ArithmeticOperator
+    {
+        Add,
+        Subtract,
+        Multiply,
+        Divide,
+        IntegerDivide,
+        Plus,
+        Minus
+    }
+}
